--- a/capitulos/capitulo 3/formularios.html
+++ b/capitulos/capitulo 3/formularios.html
@@ -201,5 +201,49 @@
 		</div>
 		</div><!-- /row-->
 	</div><!-- /container-->
+
+	<div class="container">
+		<form>
+			<div class="form-group">
+				<label for="email">Email</label>
+				<input type="email" class="form-control" id="email" placeholder="Entre com seu email" name="">
+			</div>
+			<div class="form-group">
+				<label for="senha">Senha</label>
+				<input type="password" class="form-control" id="senha" placeholder="Senha" name="">
+			</div>
+			<div class="form-group">
+				<div class="checkbox">
+					<label>Escolha as cores</label>
+					<div class="checkbox"><label><input type="checkbox" name="">Azul</label></div>
+					<div class="checkbox"><label><input type="checkbox" name="">Vermelho</label></div>
+					<div class="checkbox"><label><input type="checkbox" name="">Verde</label></div>
+							
+					
+				</div>
+			</div>
+		</form>
+
+		<form class="form-inline">
+			<div class="form-group">
+				<label for="email">Email</label>
+				<input type="email" class="form-control" id="email" placeholder="Entre com seu email" name="">
+			</div>
+			<div class="form-group">
+				<label for="senha">Senha</label>
+				<input type="password" class="form-control" id="senha" placeholder="Senha" name="">
+			</div>
+			<div class="form-group">
+				<div class="checkbox">
+					<label>Escolha as cores</label>
+					<label><input type="checkbox" name="">Azul</label>
+					<label><input type="checkbox" name="">Vermelho</label>
+					<label><input type="checkbox" name="">Verde</label>
+				</div>
+				<input type="submit" name="">
+			</div>
+		</form>
+
+	</div>
 </body>
 </html>
