--- a/capitulos/capitulo 4/icones.html
+++ b/capitulos/capitulo 4/icones.html
@@ -5,20 +5,39 @@
 	<title>Livro Majour - Capitulo 4</title>	
 	<link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-	<link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> 
-	<link rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"> </script> 
-	
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	<script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"> </script>
-	<style type="text/css">
 		
-	</style>
 </head>
 <body>
-		 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+		
 	<div class="container">
+		<h1>DropDown</h1>
+		<div class="dropdown">
+		    <button class="btn btn-success dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="dropdownMenu1">Produtos<span class="caret"></span></button>
+		    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+		          <li><a href="#">Pasta</a></li>
+		          <li><a href="#">Limão</a></li>
+		          <li><a href="#">Beterraba</a></li>
+		          <li role="separator" class="divider"></li>
+		          <li><a href="#">Potato</a></li>
+		    </ul>
+		</div>
+
+		<h1>DropUp</h1>
+		<div class="dropup">
+		    <button class="btn btn-success dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="dropdownMenu1">Produtos<span class="caret"></span></button>
+		    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+		          <li><a href="#">Pasta</a></li>
+		          <li><a href="#">Limão</a></li>
+		          <li><a href="#">Beterraba</a></li>
+		          <li role="separator" class="divider"></li>
+		          <li><a href="#">Potato</a></li>
+		    </ul>
+		</div>
+
+
 		<h1>Glyphicons <span class="glyphicon glyphicon-heart"></span></h1> 
 		<p> <span class="glyphicon glyphicon-heart"></span></p>
 		<p> <span class="glyphicon glyphicon-music"></span></p>
@@ -27,17 +46,90 @@
 		<p> <span class="glyphicon glyphicon-qrcode"></span></p>
 		<p> <span class="glyphicon glyphicon-tint"></span></p>
 	</div>
+
 	<div class="container">
-		<div class="dropdown"><!-- Menu para baixo-->
-			<button class="btn btn-primary dropdown-toggle" type="button" id="dropDown1" data-toggle="dropdown" aria-expended="true">Carros<span class="caret"></span></button>
-			<ul class="dropdown-menu" role="menu" aria-labelledby="dropDown1">
-				<li role="presentation"><a role="menu-item" href="#" tabindex="-1">Celta</a></li>
-				<li role="presentation"><a role="menu-item" href="#" tabindex="-1">Gol</a></li>
-				<li role="presentation"><a role="menu-item" href="#" tabindex="-1">Uno</a></li>
-				<li class="divider"></li>
-				<li role="presentation"><a role="menu-item" href="#" tabindex="-1">Fiorino</a></li>
-			</ul>
+		<div class="row">
+			<div class="col-md-3">
+				<h4>Alinhamento de Botões</h4>
+				<h4>Vertical</h4>
+				<div class="btn-group" role="group">
+					<button type="button" class="btn btn-primary">Novo</button>
+					<button type="button" class="btn btn-primary">Abrir</button>
+					<button type="button" class="btn btn-primary">Fechar</button>
+					<button type="button" class="btn btn-primary">Salvar</button>
+					<button type="button" class="btn btn-primary">Etc</button>
+				</div>
+			</div>
+
+			<div class="col-md-3">
+				<h4>Horizontal</h4>
+				<div class="btn-group-vertical" role="group">
+					<button type="button" class="btn btn-primary">Novo</button>
+					<button type="button" class="btn btn-primary">Abrir</button>
+					<button type="button" class="btn btn-primary">Fechar</button>
+					<button type="button" class="btn btn-primary">Salvar</button>
+					<button type="button" class="btn btn-primary">Etc</button>
+				</div>
+			</div>		
+
+			<div class="col-md-3">
+				<h4>Barra de Ferramentas</h4>
+				<div class="btn-toolbar" role="toolbar">
+					<button type="button" class="btn btn-primary">Novo</button>
+					<button type="button" class="btn btn-primary">Abrir</button>
+					<button type="button" class="btn btn-primary">Fechar</button>
+					<button type="button" class="btn btn-primary">Salvar</button>
+				</div>
+			</div>
+
+			<div class="col-md-3">
+				<h4>Agrupamento Justificado</h4>
+				<div class="btn-group btn-group-justified" role="group">
+					<div class="btn-group" role="group">
+						<button type="button" class="btn btn-primary">Novo</button>
+					</div>
+					<div class="btn-group" role="group">
+						<button type="button" class="btn btn-primary">Abrir</button>
+					</div>
+					<div class="btn-group" role="group">
+						<button type="button" class="btn btn-primary">Fechar</button>
+					</div>
+					<div class="btn-group" role="group">
+						<button type="button" class="btn btn-primary">Salvar</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
+
+	<div class="container">
+		<h3>Dimensionamento de botões</h3>
+		<div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
+			<button type="button" class="btn btn-success">Novo</button>
+			<button type="button" class="btn btn-success">Abrir</button>
+			<button type="button" class="btn btn-success">Fechar</button>
+			<button type="button" class="btn btn-success">Salvar</button>
+		</div>
+		<div class="btn-group" role="group" aria-label="Default button group">
+			<button type="button" class="btn btn-success">Novo</button>
+			<button type="button" class="btn btn-success">Abrir</button>
+			<button type="button" class="btn btn-success">Fechar</button>
+			<button type="button" class="btn btn-success">Salvar</button>
+		</div>
+		<div class="btn-group btn-group-sm" role="group" aria-label="Medium button group">
+			<button type="button" class="btn btn-success">Novo</button>
+			<button type="button" class="btn btn-success">Abrir</button>
+			<button type="button" class="btn btn-success">Fechar</button>
+			<button type="button" class="btn btn-success">Salvar</button>
+		</div>
+		<div class="btn-group btn-group-xs" role="group" aria-label="Small button group">
+			<button type="button" class="btn btn-success">Novo</button>
+			<button type="button" class="btn btn-success">Abrir</button>
+			<button type="button" class="btn btn-success">Fechar</button>
+			<button type="button" class="btn btn-success">Salvar</button>
+		</div>
+	</div>
+		
+	
 </body>
 </html>
