--- a/capitulos/capitulo 4/barra_progresso.html
+++ b/capitulos/capitulo 4/barra_progresso.html
@@ -11,6 +11,83 @@
 	
 </head>
 <body>
-	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<h4>Barra de Progresso com cor em gradiente</h4>
+				
+				<div class="progress">
+					<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+						<span class="sr-only">60% Complete</span>
+					</div>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+						<span class="sr-only">60% Complete</span>
+					</div>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+						<span class="sr-only">60% Complete</span>
+					</div>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+						<span class="sr-only">60% Complete</span>
+					</div>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+						<span class="sr-only">60% Complete</span>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="col-md-6">
+				<h4>Barra de progresso com efeito Zebra</h4>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+						<span class="sr-only"></span>
+					</div>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+						<span class="sr-only"></span>
+					</div>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+						<span class="sr-only"></span>
+					</div>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 10%;">
+						<span class="sr-only"></span>
+					</div>
+				</div>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
+						<span class="sr-only"></span>
+					</div>
+				</div>
+			</div>
+		</div><!-- /row-->
+
+		<div class="row">
+			<div class="col-md-6">
+				<h4>Barra de Progresso Animada</h4>
+				<div class="progress">
+					<div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
+						<span class="sr-only"></span>
+					</div>
+				</div>
+
+			</div>
+			
+		</div><!-- /row-->
+
+
+	</div><!-- /container-->
 </body>
 </html>
