--- a/capitulos/capitulo 5/janela_modal_javascript.html
+++ b/capitulos/capitulo 5/janela_modal_javascript.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-			<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalLogin">
+			<button type="button" class="btn btn-primary btn-lg" data-target="#modalLogin">
 		      Abrir modal normal
 	    	</button>  	
 	    	
@@ -42,6 +42,29 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="../bootstrap/js/bootstrap.min.js"></script>	
+
+	<script type="text/javascript"> 
+		$('button[data-target="#modalLogin"]').on('click', function() {
+		  	$('#modalLogin').modal('toggle'); 
+		}); 
+		  	
+		$('#modalLogin').on('show.bs.modal', function () { 
+		  	alert('Modal vai ser aberta\nEvento: show.bs.modal'); 
+		}); 
+		
+		$('#modalLogin').on('shown.bs.modal', function () { 
+		  	alert('Modal foi aberta\nEvento: shown.bs.modal'); 
+		}); 
+		 
+		$('#modalLogin').on('hide.bs.modal', function () { 
+		  	alert('Modal vai ser fechada\nEvento:hide.bs.modal'); 
+		}); 
+		
+		$('#modalLogin').on('hidden.bs.modal', function () { 
+		  	alert('Modal foi fechada\nEvento:hidden.bs.modal'); 
+		}); 
+
+	</script> 
 
 </body>
 </html>
